Modified SecurityConfig and WebConfig as per new front end host vercel